name:                ada-savings-vault
version:             0.1.0.0
license:             Apache-2.0
build-type:          Simple
cabal-version:       >=1.10

executable compiler
  main-is:             Compiler.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.9 && < 5
                     , plutus-tx
                     , plutus-tx-plugin
                     , plutus-ledger-api
                     , cardano-api
                     , aeson
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fplugin-opt PlutusTx.Plugin:target-version=1.0.0